--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
             android:theme="@style/Theme.GalactiCore"
             tools:targetApi="31">
         <activity
+                android:name=".test_login"
+                android:exported="false"/>
+        <activity
+                android:name=".LoginPage"
+                android:exported="false"/>
+        <activity
                 android:name=".MainActivity"
                 android:exported="true"
                 android:theme="@style/Theme.GalactiCore">
