--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <receiver android:name=".MyBroadcastReceiver"></receiver>
+        <receiver android:name=".AlarmReceiver"/>
     </application>
 
 </manifest>
